# CCT-Cybersecurity-PGDip

./: README.md  pyproject.toml
01_Cryptography/: caesar_cipher.py  rsa.py  vigenere_cipher.py
01_Cryptography/Lecture_10/: Cryptography_Colab_Notebook.ipynb
01_Cryptography/Lecture_11/: post-quantum-kem.py
01_Cryptography/Lecture_2/: sha-3.py
01_Cryptography/Lecture_3/: aes_lab.py
01_Cryptography/Lecture_5/: mitm-attack.py  mitm-with-encryption.py  normal-diffie-hellman.py
01_Cryptography/Lecture_6/: Brute_Force_Attack_Simulation_Advanced.ipynb  Login_With_Temporary_Block_Simulation.py
01_Cryptography/Lecture_8/: certificates_colab_tasks.ipynb  certificates_colab_tasks.py  self_signed_certificate.pem
01_Cryptography/Lecture_9/: lesson_2_colab_tasks.ipynb  lesson_2_colab_tasks.py
02_Security_Frameworks/Lecture_10/: Security_Frameworks_Lecture.ipynb
04_Secure_Programming/Lecture_2/: IsEvenF.py  MinMaxF.py  PowerF.py  Triangle.py  Vowels.py
04_Secure_Programming/Lecture_2/Basic_Scripting/Bash_Scripts/: studentchat.sh
04_Secure_Programming/Lecture_2/Basic_Scripting/Python_Scripts/: Converter.py  (+3 more)
04_Secure_Programming/Lecture_2/Log_Files/: log_auth.txt
04_Secure_Programming/Lecture_2/Python_Scripts/: AreaF.py  EvenOdd.py  GreetF.py  LeapYear.py  Palindrome.py  Reverse.py
04_Secure_Programming/Lecture_3/: passcrack.py  passlist.txt
04_Secure_Programming/Lecture_4/: http_request.py  network_scanning.py  nmap_test.py  nmap_test1.py  nmap_test2.py
04_Secure_Programming/Lecture_5/: xss.py
04_Secure_Programming/Lecture_9/: example  example.c
(+29 files in other folders)
