[project]
name = "cct-cybersecurity-pgdip"
version = "0.1.0"
description = "Coursework for the PGDip in Cybersecurity at CCT Dublin."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cryptography>=46.0.3",
    "psutil>=7.1.0",
    "python-nmap>=0.7.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
